--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
             </div>
 
         </section>
-
+            <br><br><br>
         <section class="artista-new">
+            <section class="teste">
             <article class="new-artista-esquerda">
                 <div class="text-new-artista">
                     <h1>Artista Revelação</h1>
@@ -170,16 +171,21 @@
                 <div class="button-new-artista">
                     <button class="btn-home"><a href="/"><strong>CONFIRA</strong></a></button>
                 </div>
+                </div>
             </article>
             <article class="new-artista-direita">
                 <h1>Hwasa</h1>
                 <img src="src/home/components/img-cantores/hwasa.jfif" alt="hwasa" id="new-artista-img">
             </article>
         </section>
+        </section>
+
         <section class="present-arage-pro">
             <article class="present-arage-esquerda">
-                <h1><strong>Arage PRO</strong></h1>
-                <p> Com o Arage Pro, você pode desfrutar de uma <br>
+                <div class="titulo-arage-pro"><h1><strong>Arage PRO</strong></h1></div>
+                <div class="text-arage-pro">
+                    <p> 
+                    Com o Arage Pro, você pode desfrutar de uma <br>
                     experiência sem anúncios, garantindo que nada <br>
                     interrompa sua navegação ou uso do site. Além disso, ele <br>
                     oferece qualidade de áudio superior, permitindo que você <br>
@@ -189,13 +195,15 @@
                     funcionalidades exclusivas, que tornam a experiência mais <br>
                     personalizada e eficiente.
                     </p>
+                </div>
             </article>
             <article class="present-arage-direita">
                 <div>
-                    <img src="src/" alt="arage-pro">
+                    <img src="src/components/img-logos/arage-pro-sem-fundo.png" alt="arage-pro">
                 </div>
             </article>
         </section>
+
         <section class="buy-arage-pro">
             <article class="buy-arage-pro-esquerda">
                     <div>    
