--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
                 <div class="titulo-arage-pro"><h1><strong>Arage PRO</strong></h1></div>
                 <div class="text-arage-pro">
                     <p> 
-                    Com o Arage Pro, você pode desfrutar de uma <br>
-                    experiência sem anúncios, garantindo que nada <br>
-                    interrompa sua navegação ou uso do site. Além disso, ele <br>
-                    oferece qualidade de áudio superior, permitindo que você <br>
-                    aproveite o conteúdo com mais nitidez e clareza. Outras <br>
-                    vantagens incluem o acesso offline, permitindo que você <br>
-                    utilize o serviço mesmo sem conexão à internet, e <br>
-                    funcionalidades exclusivas, que tornam a experiência mais <br>
+                    Com o Arage Pro, você pode desfrutar de uma 
+                    experiência sem anúncios, garantindo que nada 
+                    interrompa sua navegação ou uso do site. <br> Além disso, ele
+                    oferece qualidade de áudio superior, permitindo que você 
+                    aproveite o conteúdo com mais nitidez e clareza. <br>Outras 
+                    vantagens incluem o acesso offline, permitindo que você 
+                    utilize o serviço mesmo sem conexão à internet, e 
+                    funcionalidades exclusivas, que tornam a experiência mais 
                     personalizada e eficiente.
                     </p>
                 </div>
