--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -83,6 +83,7 @@
                     <img src="src/components/img-logos/arage_sem_fundo.png" alt="ARAGE" id="logo-arage">
             </article>
         </section>
+
         <section class="artistas-semana">
             <div class="titulo-section">
                 <h1><strong>Artista da Semana</strong></h1>
@@ -91,7 +92,6 @@
                 <article class="container-img" id="artista1">
                     <div class="img-artista">
                         <img src="src/home/components/img-cantores/the_weeknd.jfif" alt="The weeknd" class="img-week" id="pessoa1">
-                        
                         <div class="description-artista">
                             <h2><strong>THE WEEKND</strong></h2>
                             <p>popular</p>
@@ -152,22 +152,21 @@
 
         </section>
             <br><br><br>
+
         <section class="artista-new">
             <section class="teste">
             <article class="new-artista-esquerda">
                 <div class="text-new-artista">
-                    <h1>Artista Revelação</h1>
-                    <br>
+                    <div class="titulo-new-artista"><h1>Artista Revelação</h1></div>
                     <div class="artista-description">
                         <p>
-                        Ahn Hye-jin, conhecida profissionalmente pelo seu nome <br>
-                        artístico Hwasa, é uma cantora, compositora, rapper e <br>
-                        modelo sul-coreana. É integrante do grupo feminino <br>
-                        Mamamoo, que estreou em 18 de junho de 2014 com o <br>
+                        Ahn Hye-jin, conhecida profissionalmente pelo seu nome 
+                        artístico Hwasa, é uma cantora, compositora, rapper e 
+                        modelo sul-coreana. É integrante do grupo feminino 
+                        Mamamoo, que estreou em 18 de junho de 2014 com o 
                         single "Mr. Ambiguous"
                         </p>
                     </div>
-                </div>
                 <div class="button-new-artista">
                     <button class="btn-home"><a href="/"><strong>CONFIRA</strong></a></button>
                 </div>
